font spacing fix

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -6773,7 +6773,7 @@ height: 30px;
 }
 
 .seo_features_content h2 {
-  font-size: 35px;
+  font-size: 40px;
   /* line-height: 40px; */
   color: #7444FD;
   font-weight: bold;
